--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,26 @@
 .App {
   text-align: center;
 }
+div{
+  box-sizing: border-box;
+}
+.list{
+  padding-left: 20px;
+  text-align: left;
+  border-bottom: 1px solid gray;
+}
+.black-nav{
+  display: flex;
+  background-color: black;
+  width: 100%;
+  color: white;
+  padding-left: 20px;
+}
+.cursor {
+  width : 200px;
+  height : 200px;
+  cursor : pointer;
+}
 
 .App-logo {
   height: 40vmin;
@@ -9,7 +29,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 0.3s linear;
   }
 }
 
